# bfuse-project

./: .gitignore  BfuseConfig.h.in  CMakeLists.txt  Dockerfile  README.md  compile_commands.json  conv2d_B1_matmul_B16_fused_.cu  main.cc  run.sh
bfuse/: CMakeLists.txt
bfuse/include/: bfuse.h  tools.h  utils.h
bfuse/include/bfuse/: Algorithms.h  Bfuse.h  Contexts.h  Database.h  Instances.h  MatchFinders.h  Matchers.h  Tools.h  Utils.h
bfuse/src/: Algorithms.cc  Bfuse.cc  Contexts.cc  Database.cc  Instances.cc  MatchFinders.cc  Matchers.cc  Tools.cc  Utils.cc  bfuse.cc  tools.cc  utils.cc
configs/: fusions.yaml  (+2 more)
horizontal-fuser/: CMakeConfig.h.in  CMakeLists.txt  LICENSE
horizontal-fuser/include/fuse/: Algorithms.h  Contexts.h  Fuse.h  Matchers.h  Tools.h  Utils.h
horizontal-fuser/src/: Algorithms.cc  Contexts.cc  Fuse.cc  Matchers.cc  Tools.cc  Utils.cc  main.cc
test/: CMakeLists.txt
test/clang-test/: CMakeLists.txt  main.cc
test/eval/scripts/: kernel_schedules.py  print_code_example.py  research_kernels.py  research_networks.py
test/eval/scripts/cuda/: bgemm.cu  conv2d.cu  conv2d_large.cu  conv2d_small.cu  conv2d_small_special.cu  depConv2d.cu  pool2d.cu  softmax.cu
test/eval/scripts/log/: conv2d.json  conv2d_large.json  conv2d_small.json  depConv2d.json  pool2d.json  softmax.json
test/eval/scripts/network/: densenet-121.txt  inception_v3.txt  mobilenet.task.txt  mobilenet.txt  resnet-18.txt  squeezenet_v1.1.txt
test/eval/scripts/python/: conv2d_large.py  conv2d_small.py
test/eval/scripts/tir/: bgemm.tir  conv2d.tir  conv2d_large.tir  conv2d_small.tir  conv2d_small_special.tir  depConv2d.tir  pool2d.cu  pool2d.tir  softmax.cu  softmax.tir
test/fusion-bench/: utils.cpp  utils.h
test/fusion-bench/cuda/: conv2d_B1.cu  conv2d_B4.cu  conv2d_B4_matmul_B128_fused_.cu  conv2d_B4_matmul_B128_hfuse_.inc  conv2d_B4_matmul_B32_bfuse_.inc  conv2d_B4_matmul_B64_bfuse_.inc  conv2d_B8_matmul_B32_fused_.cu  conv2d_B8_matmul_B32_hfuse_.inc  conv2d_B8_matmul_B64_fused_.cu  kernels.yaml  matmul_B128.cu
test/fusion-test/: CMakeLists.txt  compile_commands.json  kernel_fused.cu  kernels.cu  kernels.cu.bak  run.sh  test_kernels.cu
test/fusion-test/configs/: fusions.yaml  kernels.yaml
test/fusion-test/ml_configs/: fusion.yaml  kernels.yaml
test/fusion-test/results/: conv2d_B1_matmul_B16_.cu  conv2d_B1_matmul_B16_fused_.cu  conv2d_B1_test_matmul_B16_test_.cu  conv2d_B4_matmul_B128_fused_.cu  conv2d_B4_matmul_B32_fused_.cu  conv2d_B4_matmul_B64_fused_.cu  conv2d_B8_matmul_B128_fused_.cu  conv2d_B8_matmul_B32_fused_.cu  conv2d_B8_matmul_B64_fused_.cu
test/fusion_bench/: Makefile  fusion_bench  main.cpp  operation.cu  operation.h
test/fusion_bench/BFuse/: bgemm_shared_5120_bgemm_shared_5120_copy_.cu  bgemm_shared_7168_bgemm_shared_7168_copy_.cu  conv2d_depConv2d_.cu  conv2d_shared_4096_conv2d_shared_4096_copy_.cu  conv2d_shared_6144_conv2d_shared_6144_copy_.cu  conv2d_shared_8192_conv2d_shared_8192_copy_.cu  conv2d_small_conv2d_large_.cu  conv2d_softmax_.cu  softmax_shared_1036_softmax_shared_1036_copy_.cu  softmax_shared_12_softmax_shared_12_copy_.cu  softmax_shared_2060_softmax_shared_2060_copy_.cu  softmax_shared_3084_softmax_shared_3084_copy_.cu
test/fusion_bench/HFuse/: bgemm_shared_5120_bgemm_shared_5120_copy_.inc  bgemm_shared_6144_bgemm_shared_6144_copy_.inc.cu  bgemm_shared_7168_bgemm_shared_7168_copy_.inc  conv2d_shared_2048_conv2d_shared_2048_copy_.inc  conv2d_shared_6144_conv2d_shared_6144_copy_.inc  conv2d_small_conv2d_large_.inc  softmax_shared_1036_softmax_shared_1036_copy_.inc.cu  softmax_shared_12_softmax_shared_12_copy_.inc.cu  softmax_shared_2060_softmax_shared_2060_copy_.inc.cu  softmax_shared_3084_softmax_shared_3084_copy_.inc.cu
test/fusion_bench/cuda/: bgemm_conv2d_.cu  bgemm_shared_6144.cu  bgemm_shared_7168.cu  compile_commands.json  conv2d_B2.cu  conv2d_B4_matmul_B128_bfuse_.inc  conv2d_B4_matmul_B32_fused_.cu  conv2d_B4_matmul_B32_hfuse_.inc  conv2d_B4_matmul_B64_fused_.cu  conv2d_B4_matmul_B64_hfuse_.inc  conv2d_B8.cu  conv2d_B8_matmul_B128_bfuse_.inc  conv2d_B8_matmul_B128_fused_.cu  conv2d_B8_matmul_B128_hfuse_.inc  conv2d_B8_matmul_B32_bfuse_.inc  conv2d_B8_matmul_B64_bfuse_.inc  conv2d_B8_matmul_B64_hfuse_.inc  conv2d_depConv2d_.cu  conv2d_shared_2048.cu  conv2d_shared_6144.cu  conv2d_small_conv2d_large_.cu  conv2d_softmax_.cu  fusion.yaml  matmul_B16.cu  matmul_B32.cu  matmul_B64.cu  softmax_shared_2060.cu
test/tvm_fused/BFuse/: compile_commands.json
test/tvm_fused/BFuse/configs/: fusions.yaml  kernels.yaml
test/tvm_fused/BFuse/results/: bgemm_conv2d_.cu  bgemm_shared_5120_bgemm_shared_5120_copy_.cu  bgemm_shared_5120_conv2d_shared_2048_.cu  bgemm_shared_6144_bgemm_shared_6144_copy_.cu  bgemm_shared_7168_bgemm_shared_7168_copy_.cu  bgemm_shared_8192_bgemm_shared_8192_copy_.cu  conv2d_depConv2d_.cu  conv2d_shared_11808_conv2d_shared_11808_copy_.cu  conv2d_shared_12832_conv2d_shared_12832_copy_.cu  conv2d_shared_13856_conv2d_shared_13856_copy_.cu  conv2d_shared_14880_conv2d_shared_14880_copy_.cu  conv2d_shared_2048_conv2d_shared_2048_copy_.cu  conv2d_shared_4096_conv2d_shared_4096_copy_.cu  conv2d_shared_6144_conv2d_shared_6144_copy_.cu  conv2d_small_conv2d_large_.cu  conv2d_softmax_.cu  run.sh  softmax_shared_1024_softmax_shared_1024_copy_.cu  softmax_shared_12_softmax_shared_12_copy_.cu  softmax_shared_2048_softmax_shared_2048_copy_.cu  softmax_shared_2060_softmax_shared_2060_copy_.cu  softmax_shared_4_softmax_shared_4_copy_.cu  softmax_shared_512_softmax_shared_512_copy_.cu
test/tvm_fused/HFuse/: compile_commands.json
test/tvm_fused/HFuse/configs/: fusions.yaml  kernels.yaml
test/tvm_script/: default_tvm_layer.py  tune_and_opt_layers.py
test/tvm_script/cuda/: bgemm.cu  bgemm_B128.cu  conv2d.cu  conv2d_B128.cu  pool2d_B128.cu  softmax.cu  softmax_B128.cu
test/tvm_script/cuda_modified/: softmax_B128.cu
test/tvm_script/default/: conv2d_document.cu  conv2d_relay.cu
test/tvm_script/json/: bgemm-large.json  bgemm.json  bgemm_B128_small_size-cuda.json  conv2d.json  conv2d_B128-cuda.json  pool2d.json  softmax.json
(+19633 files in other folders)
